# lugchat

./: .gitignore  LugChatClient.java  README.md
godot/: export_presets.cfg  icon.svg.import  project.godot  utils.gd
godot/scenes/chat/: cha61E.tmp  chat.gd  chat.tscn  chat_connection.gd  post.tscn
godot/scenes/main_menu/: main_menu.gd  main_menu.tscn  user_profile.gd
java_reference/: .gitignore  LugChatClient.java  LugChatMessage.java  LugChatServer.java
node-lugChatCliClient/: .eslintrc.cjs  Makefile  README.md  index.js  package-lock.json  package.json
node-lugChatCliClient/lib/: PromptSchemas.js
node-lugChatServer/: Makefile  README.md  package-lock.json  package.json  server.js
node-lugChatServer/lib/: BaseDB.js  UserSocket.js  db.js  memory.js  model.d.ts
node-lugchat-common/: .eslintrc.cjs  index.js  package-lock.json  package.json
node-lugchat-common/lib/: Protocol.js  Utils.js  db.js  memory.js  model.d.ts
node-lugchat-common/test/: protocol-tests.js  utils-tests.js
rust-chat/: README.md  package-lock.json  package.json  splashscreen.html
rust-chat/src/: App.svelte  main.ts
rust-chat/src-tauri/: Cargo.toml  tauri.conf.json
rust-chat/src-tauri/src/: chat_error.rs  configuration.rs  connection.rs  main.rs
rust-chat/src-tauri/src/protocol/: envelope.rs  message.rs  mod.rs
rust-chat/src-tauri/src/utils/: mod.rs  timestamp.rs  utils.rs
rust-chat/src/lib/: Post.svelte  utils.ts
rust_prate/: Cargo.toml
rust_prate/src/: configuration.rs  connection.rs  main.rs  protocol.rs
rust_prate/src/utils/: timestamp.rs
