[package]
name = "rust_prate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.160", features = ["derive"] }
serde_json = { version="1.0.96", features = ["raw_value"]}
time = { version = "*", features = ["macros", "serde"]}

[dev-dependencies]
ctor = "0.2.0"
